fix(card): fix card scrollbar on windows

--- a/client/components/cards/cardDetails.styl
+++ b/client/components/cards/cardDetails.styl
@@ -105,12 +105,12 @@ avatar-radius = 50%
     padding-left: 0
 
   .card-details-canvas
-    width: 470px
-    padding-left: 20px
+    width: auto
+    padding: 0 20px
 
   .card-details-header
     margin: 0 -20px 5px
-    padding 7px 16px
+    padding 7px 20px
     background: darken(white, 7%)
     border-bottom: 1px solid darken(white, 14%)
 
